deployment/aws-k8s-pipeline.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-app
  namespace: geo-space
spec:
  replicas: 3
  selector:
    matchLabels:
      app: geo-app
  template:
    metadata:
      labels:
        app: geo-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: geo-app
          image: 565026306441.dkr.ecr.eu-west-3.amazonaws.com/gis-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
      imagePullSecrets:
        - name: aws-ecr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: geo-app
  namespace: geo-space
  labels:
    app: geo-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: geo-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geo-app-sinignaci-fr
  namespace:  geo-space
spec:
  ingressClassName: nginx
  rules:
    - host: geo-api.sinignaci.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geo-app
                port:
                  number: 80
